examples/spark/minio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio
  name: minio
  namespace: frederik-coquelet
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'false'
      labels:
        app: minio
    spec:
      containers:
      - command:
        - "/bin/sh"
        - "-ce"
        - "/usr/bin/docker-entrypoint.sh minio server /data{1..4} --address :9000 --console-address :9001"
        image: quay.io/minio/minio:RELEASE.2022-01-28T02-28-16Z
        name: minio
        ports:
        - containerPort: 9000
        - containerPort: 9001
        volumeMounts:
        - mountPath: /data1
          name: data1
        - mountPath: /data2
          name: data2
        - mountPath: /data3
          name: data3
        - mountPath: /data4
          name: data4

      volumes:
      - name: data1
        persistentVolumeClaim:
          claimName: minio-pvc-1
      - name: data2
        persistentVolumeClaim:
          claimName: minio-pvc-2
      - name: data3
        persistentVolumeClaim:
          claimName: minio-pvc-3
      - name: data4
        persistentVolumeClaim:
          claimName: minio-pvc-4

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio-spark
  namespace: frederik-coquelet
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
      name: minio-api
    - port: 9001
      protocol: TCP
      targetPort: 9001
      name: minio-console
  selector:
    app: minio
  type: LoadBalancer
