examples/spark/authorizationpolicy-textgenerationwebui.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
  name: text-generation-webui
  namespace: frederik-coquelet
spec:
  rules:
  - {}
  selector:
    matchLabels:
      app: text-generation-webui
