examples/spark/authorizationpolicy_ns_user.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: namespace-allow
  namespace: frederik-coquelet
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["frederik-coquelet"]
