examples/spark/authorizationpolicy_sa.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
  name: spark-driver-executor
  namespace: frederik.coquelet
spec:
  selector:
    matchLabels:
      app: spark
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/frederik-coquelet/sa/spark-executor
